--- a/src/.bazelrc
+++ b/src/.bazelrc
@@ -3,8 +3,8 @@ build --config=verbose --copt='-std=c++14' --force_pic --action_env=PROTOBUF_BIN
 build:r --define r=true
 build:java  --define java=true --action_env=JAVA_PREFIX
 build:python --define python=true  --action_env=PYTHON2_SYSPATH --action_env=PYTHON2_PREFIX --action_env=PYTHON2_VERSION --action_env=NUMPY_PREFIX --action_env=PYTHON3_SYSPATH --action_env=PYTHON3_PREFIX --action_env=PYTHON3_VERSION
-build:fast-binary-py2 --copt='-DCUSTOM_LIBEXAUDFLIB_PATH="/exaudf/libexaudflib_complete.so"' //:exaudfclient_py2_replace_rpath
-build:fast-binary-py3 --copt='-DCUSTOM_LIBEXAUDFLIB_PATH="/exaudf/libexaudflib_complete.so"' //:exaudfclient_py3_replace_rpath
+build:fast-binary-py2 --copt='-DCUSTOM_LIBEXAUDFLIB_PATH="/exaudf/libexaudflib_complete.so"' //:exaudfclient
+build:fast-binary-py3 --copt='-DCUSTOM_LIBEXAUDFLIB_PATH="/exaudf/libexaudflib_complete.so"' //:exaudfclient_py3
 build:fast-binary-both --config=fast-binary-py2 --config=fast-binary-py3
 build:slow-wrapper-py2 //:exaudfclient_py2_bash_wrapper
 build:slow-wrapper-py3 //:exaudfclient_py3_bash_wrapper
