--- a/src/BUILD
+++ b/src/BUILD
@@ -77,7 +77,7 @@ VM_PYTHON3_DEPS=select({
     }) 
 
 cc_binary(
-    name = "exaudfclient_wrong_rpath_py2",
+    name = "exaudfclient",
     srcs = ["exaudfclient.cc"],
     linkopts = ["-ldl"], # needed for dynamicly loading libexaudflib_complete.so into another linker namespace
     deps = ["//exaudflib:header", "//:debug_message_h"]+VM_ENABLED_DEPS+VM_PYTHON2_DEPS,
@@ -86,7 +86,7 @@ cc_binary(
 )
 
 cc_binary(
-    name = "exaudfclient_wrong_rpath_py3",
+    name = "exaudfclient_py3",
     srcs = ["exaudfclient.cc"],
     linkopts = ["-ldl"], # needed for dynamicly loading libexaudflib_complete.so into another linker namespace
     deps = ["//exaudflib:header", "//:debug_message_h"]+VM_ENABLED_DEPS+VM_PYTHON3_DEPS,
@@ -94,72 +94,29 @@ cc_binary(
     data = [":libexaudflib_complete.so"]
 )
 
-# Workarounds for the problems of JNI/JVM with rpath's used by Bazel.
-# Problem Description:
-# - Bazel creates for all external local repositories symlinks into its build directory
-# - Bazel than writes during compilation these paths to the rpath of the binary
-# - JNI/JVM uses the rpath for loading additonal shared libraries, 
-#   but for a unknown reason it seems to truncate these pathes. 
-# - We assume two possible reason, the symlink paths of bazel contain a @, or
-#   the paths are to long and get for that reason truncated
-# - In the end, it we wasn't able to convinve JNI/JVM from other pathes 
-#   for its libraries, as the original pathes where apt installed the files.
-# - We developed two workarrounds:
-#   1. Replace the paths for java in the rpath of the binary (//:exaudfclient_replace_rpath, //:exaudfclient_py3_replace_rpath)
-#       - faster than the second workarround, because starting a script to setup the environment variables takes a moment
-#       - with this workarround the paths for exaudflib-complete.so and python_ext_dataframe.so need to be hard coded into the binary,
-#         whith the consequence that the binary only works in the UDF container in the database or in docker in a very specific directory
-#       - Doesn't change the LD_LIBRARY_PATH environment variable
-#       - 
-#   2. Wrap the binary into a bash script which setups the LD_LIBRARY_PATH (used when libraries not found in the rpath) 
-#      and environment variables for exaudflib-complete.so and python_ext_dataframe.so
-#       - slower than the first workarround
-#       - binaries work everywhere
-#       - Java libraries directories are appended to LD_LIBRARY_PATH
-#       - better for local testing and debugging
-
-###########################################################################################
-################################## Workarround 1 ##########################################
-###########################################################################################
-genrule(
-    name = "exaudfclient_py2_replace_rpath",
-    cmd = """
-        $(location fix_rpath.sh) "$(location exaudfclient_wrong_rpath_py2)" "$(location exaudfclient)"
-    """,
-    outs = ["exaudfclient"],
-    srcs = [":exaudfclient_wrong_rpath_py2", "fix_rpath.sh",":libexaudflib_complete.so"],
-    output_to_bindir = True
-)
-
-genrule(
-    name = "exaudfclient_py3_replace_rpath",
-    cmd = """
-        $(location fix_rpath.sh) "$(location exaudfclient_wrong_rpath_py3)" "$(location exaudfclient_py3)"
-    """,
-    outs = ["exaudfclient_py3"],
-    srcs = [":exaudfclient_wrong_rpath_py3", "fix_rpath.sh",":libexaudflib_complete.so"],
-    output_to_bindir = True
-)
-
-###########################################################################################
-################################## Workarround 2 ##########################################
-###########################################################################################
+# Workarround for the hardcoded paths in exaudfclient for libexaudflib_complete.so and python_ext_dataframe.cc
+# - libexaudflib_complete.so and python_ext_dataframe.cc get dynamically loaded, therefore the exaudfclient needs to know their paths
+# - Most flexible way to provides these paths would environment variables
+# - The exasol database can't provide these paths, because they depend on the container
+# - A workarround to provide these paths would be wrapper bash script which set these environment variables
+# - For performance reason, we can not wrap the binary into a shell script, as such this is only for local debugging and testing
+#   and we hardcode the paths for the production container
 genrule(
     name = "exaudfclient_py2_bash_wrapper",
     cmd = """
-        $(location create_binary_wrapper.sh) "$(location exaudfclient_wrong_rpath_py2)" "$(location exaudfclient_py2.sh)" "$(location exaudfclient.template.sh)"
+        $(location create_binary_wrapper.sh) "$(location exaudfclient)" "$(location exaudfclient_py2.sh)" "$(location exaudfclient.template.sh)"
     """,
     outs = ["exaudfclient_py2.sh"],
-    srcs = [":exaudfclient_wrong_rpath_py2", "libexaudflib_complete.so", "exaudfclient.template.sh","create_binary_wrapper.sh"],
+    srcs = [":exaudfclient", "libexaudflib_complete.so", "exaudfclient.template.sh","create_binary_wrapper.sh"],
     output_to_bindir = True
 )
 
 genrule(
     name = "exaudfclient_py3_bash_wrapper",
     cmd = """
-        $(location create_binary_wrapper.sh) "$(location exaudfclient_wrong_rpath_py3)" "$(location exaudfclient_py3.sh)" "$(location exaudfclient.template.sh)"
+        $(location create_binary_wrapper.sh) "$(location exaudfclient_py3)" "$(location exaudfclient_py3.sh)" "$(location exaudfclient.template.sh)"
     """,
     outs = ["exaudfclient_py3.sh"],
-    srcs = [":exaudfclient_wrong_rpath_py3", "libexaudflib_complete.so", "exaudfclient.template.sh", "create_binary_wrapper.sh"],
+    srcs = [":exaudfclient_py3", "libexaudflib_complete.so", "exaudfclient.template.sh", "create_binary_wrapper.sh"],
     output_to_bindir = True
 )
