--- a/aws-code-build/ci/build_buildspec.yaml
+++ b/aws-code-build/ci/build_buildspec.yaml
@@ -27,7 +27,7 @@ phases:
         - echo CODEBUILD_SOURCE_VERSION is $CODEBUILD_SOURCE_VERSION #supposed to be the SHA
         - echo CODEBUILD_WEBHOOK_HEAD_REF is $CODEBUILD_WEBHOOK_HEAD_REF #supposed to the branch name
         - echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USER" --password-stdin
-        - mkdir -p ".build_output/jobs" ".build_output/security_scan" #Create output directory here. Otherwise artifacts phase might fail.
+        - mkdir -p ".build_output/jobs" ".build_output/security_scan" ".build_output/metadata" #Create output directory here. Otherwise artifacts phase might fail.
         - echo "$(date)" > .build_output/metadata/start_date
         - echo "$CODEBUILD_SOURCE_VERSION" > .build_output/metadata/commit_sha
         - echo "$CODEBUILD_WEBHOOK_HEAD_REF" > .build_output/metadata/branch
