--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ python = ">=3.8,<4"
 importlib-resources = ">=5.4.0"
 exasol_script_languages_container_tool = { url = "https://github.com/exasol/script-languages-container-tool/releases/download/0.13.0/exasol_script_languages_container_tool-0.13.0-py3-none-any.whl" }
 exasol-script-languages-container-ci = {url = "https://github.com/exasol/script-languages-container-ci/releases/download/0.1.0/exasol_script_languages_container_ci-0.1.0-py3-none-any.whl"}
-exasol-script-languages-container-ci-setup = {git = "https://github.com/exasol/script-languages-container-ci-setup.git", branch="refactoring/10_update_dependencies_and_prepare_release"}
+exasol-script-languages-container-ci-setup = {url = "https://github.com/exasol/script-languages-container-ci-setup/releases/download/0.1.0/exasol_script_languages_container_ci_setup-0.1.0-py3-none-any.whl"}
 [build-system]
 requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
