--- a/flavors/python-3.8-conda-minimal-EXASOL-6.2.0/flavor_base/build_deps/Dockerfile
+++ b/flavors/python-3.8-conda-minimal-EXASOL-6.2.0/flavor_base/build_deps/Dockerfile
@@ -5,4 +5,9 @@ COPY build_deps/packages /build_info/packages/build_deps
 
 RUN /scripts/install_scripts/install_via_conda.pl --file /build_info/packages/build_deps/conda_packages --with-versions
 
+RUN curl -L -o swig-2.0.4.tar.gz https://storage.googleapis.com/exasol-script-languages-dependencies/swig-2.0.4.tar.gz && \
+    tar zxf swig-2.0.4.tar.gz && \
+    (cd swig-2.0.4 && ./configure --prefix=/usr && make && make install) && \
+    rm -rf swig-2.0.4 swig-2.0.4.tar.gz
+
 ENV PROTOBUF_BIN=/opt/conda/bin/protoc
