--- a/exaudfclient/base/MODULE.bazel
+++ b/exaudfclient/base/MODULE.bazel
@@ -26,8 +26,22 @@ protobuf_local_repository = use_repo_rule("//:protobuf_repository.bzl", "protobu
 protobuf_local_repository(name = "protobuf")
 
 
-ssl_local_repository = use_repo_rule("//:ssl_repository.bzl", "ssl_local_repository")
-ssl_local_repository(name = "ssl")
+new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")
+
+new_local_repository(
+    name = "ssl",
+    build_file_content = """
+cc_library(
+    name = "ssl",
+    srcs = ["usr/lib/x86_64-linux-gnu/libssl.so","usr/lib/x86_64-linux-gnu/libcrypto.so"],
+    hdrs = glob(["usr/include/openssl/*.h"]),
+    includes = ["usr/include/openssl"],
+    visibility = ["//visibility:public"]
+)
+    """,
+    path = "/",
+)
+
 
 java_local_repository = use_repo_rule("//:java_repository.bzl", "java_local_repository")
 java_local_repository(name = "java")
