--- a/flavors/template-Exasol-all-python-3.10-conda/flavor_base/build_run/Dockerfile
+++ b/flavors/template-Exasol-all-python-3.10-conda/flavor_base/build_run/Dockerfile
@@ -10,7 +10,7 @@ ENV C_INCLUDE_PATH=$C_INCLUDE_PATH:$MAMBA_ROOT_PREFIX/include/
 RUN ./build.sh --lockfile_mode=off --config no-tty --config optimize --config python --config fast-binary-py3
 RUN cp -r -L bazel-bin/* /exaudf
 
-RUN ./test_udfclient.sh /exaudf/exaudfclient_py3
+RUN ./base/test_udfclient.sh /exaudf/exaudfclient_py3
 
 WORKDIR /exaudf
 
