--- a/flavors/template-Exasol-all-python-3.10-cuda-conda/flavor_base/base_test_build_run/Dockerfile
+++ b/flavors/template-Exasol-all-python-3.10-cuda-conda/flavor_base/base_test_build_run/Dockerfile
@@ -14,8 +14,8 @@ ENV C_INCLUDE_PATH=$C_INCLUDE_PATH:$MAMBA_ROOT_PREFIX/include/
 # We need to build with optimize here, because the debug build fails to run with a runtime linking error regarding protobuf
 RUN ./build.sh --lockfile_mode=off --config no-tty -c dbg --config python --config test-binaries-py3
 RUN cp -r -L bazel-bin/* /exaudf
-RUN ./test_udfclient.sh /exaudf/exaudfclient_py3
-RUN ./test_udfclient.sh /exaudf/exaudfclient_py3_static
+RUN ./base/test_udfclient.sh /exaudf/exaudfclient_py3
+RUN ./base/test_udfclient.sh /exaudf/exaudfclient_py3_static
 
 WORKDIR /
 RUN mkdir /exasol_emulator
